# halide_lung_cancer_identification

./: CMakeLists.txt  README.md  main.cpp  roi_definition.cpp  roi_definition.h
SE1/: 1-157.dcm  1-158.dcm  1-159.dcm  1-160.dcm  1-161.dcm  1-162.dcm  1-163.dcm
